--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dev:restart": "npm run dev:stop && npm run dev:start"
   },
   "devDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.50.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "eslint": "^8.55.0",
