--- a/package.json
+++ b/package.json
@@ -36,6 +36,13 @@
   },
   "dependencies": {
     "@radix-ui/react-switch": "^1.2.6",
-    "@tanstack/react-table": "^8.21.2"
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/rotate": "^3.12.0",
+    "@react-pdf-viewer/thumbnail": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
+    "@tanstack/react-table": "^8.21.2",
+    "pdfjs-dist": "^3.4.120"
   }
 }
