--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
@@ -43,6 +46,7 @@
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "@tanstack/react-table": "^8.21.2",
-    "pdfjs-dist": "^3.4.120"
+    "pdfjs-dist": "^3.4.120",
+    "react-pdf": "^7.0.0"
   }
 }
