--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "@tanstack/react-table": "^8.21.2",
     "pdfjs-dist": "^3.4.120",
-    "react-pdf": "^7.0.0"
+    "react-pdf": "^7.0.0",
+    "tailwind-scrollbar": "^4.0.2"
   }
 }
